--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB </title>
     <link rel="stylesheet" href="./font/style.css">
-    <link rel="stylesheet" href="/font/fontawesome-free-6.4.0-web/fontawesome-free-6.4.0-web/css/all.min.css">
+    <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/fontawesome-free-6.4.0-web/css/all.min.css">
 </head>
 <body>
         <!-- begin header -->
@@ -191,23 +191,23 @@
         <footer id = "footer">
             <div class="footer-trademark">
                 <div class="trademark-logo">
-                    <img src="/font/img/logo-carousel/logo-1.png" alt="" class="logo">
-                    <img src="/font/img/logo-carousel/logo-2.png" alt="" class="logo">
-                    <img src="/font/img/logo-carousel/logo-3.png" alt="" class="logo">
-                    <img src="/font/img/logo-carousel/logo-4.png" alt="" class="logo">
-                    <img src="/font/img/logo-carousel/logo-5.png" alt="" class="logo">
+                    <img src="./font/img/logo-carousel/logo-1.png" alt="" class="logo">
+                    <img src="./font/img/logo-carousel/logo-2.png" alt="" class="logo">
+                    <img src="./font/img/logo-carousel/logo-3.png" alt="" class="logo">
+                    <img src="./font/img/logo-carousel/logo-4.png" alt="" class="logo">
+                    <img src="./font/img/logo-carousel/logo-5.png" alt="" class="logo">
                 </div>
 
                 <div class="footer-information">
                     <div class="information-item">
-                        <div class="information-font">
+                        <div class="information-font information-font-1">
                             <img class="logo1" src="/font/img/logo.png" alt="">
                             <p >Address: 427 Kinh Duong Vuong,Da Nang </p>
                             <p>Phone: +84 0906472426</p>
                             <p>Email: levu1962004@gmail.com</p>
                         </div>
 
-                        <div class="information-font">
+                        <div class="information-font information-font-2">
                             <h4>Information</h4>
                             <p>About US</p>
                             <P>CheckOut</P>
@@ -215,7 +215,7 @@
                             <p>Serivius</p>
                         </div>
 
-                        <div class="information-font">
+                        <div class="information-font information-font-3">
                             <h4>My Account</h4>
                             <p>My Account</p>
                             <P>contact</P>
@@ -223,7 +223,7 @@
                             <p>Shop</p>
                         </div>
 
-                        <div class="information-font">
+                        <div class="information-font information-font-4">
                             <h4>Join Our Newsletter Now</h4>
                             <p>Get E-mail updates about our letest shop and special offers.</p>
                             <input type="text" placeholder="Enter Your Mail">
